--  see http://haskell.org/cabal/users-guide/
name:                Ringo
version:             0.1.0.0
synopsis:            Beat oriented programing language
-- description:         
homepage:            https://github.com/gogotanaka/Ringo
license:             MIT
license-file:        LICENSE
author:              gogotanaka
-- patches.
maintainer:          mail@tanakakazuki.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Executable ringo
  main-is:             Ringo.hs
  Build-depends:       base >= 4.0 && < 5
  hs-source-dirs:      src
  ghc-prof-options:    -prof -auto-all  
  default-language:    Haskell2010
