name:                Ringo
version:             0.1.0.0
synopsis:            Beat oriented programing language
description:         Beat oriented programing language
homepage:            https://github.com/gogotanaka/Ringo
license:             MIT
license-file:        LICENSE
author:              gogotanaka
maintainer:          mail@tanakakazuki.com
copyright:           gogotanaka
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/gogotanaka/Ringo.git

library
  exposed-modules:     Ringo, Ringo.SKICore
  hs-source-dirs:      src
  Build-depends:       base >= 4.0 && < 5, parsec
  default-language:    Haskell2010

executable ringo
  main-is:             Interpreter.hs
  Build-depends:       base >= 4.0 && < 5, parsec
  hs-source-dirs:      src
  ghc-prof-options:    -prof -auto-all  
  default-language:    Haskell2010


test-suite tests
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       Ringo,
                       transformers,
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
